# pathway-diagrams

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  main.py  pyproject.toml
.github/workflows/: tests.yml
input/: streams.xlsx
output/: .$Physical Applied Maths.drawio.bkp
pipeline/: config.py  drawio_writer.py  export.py  layout.py  load_excel.py  model.py
tests/: conftest.py  test_model.py
