[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "curriculum-diagrams"
version = "0.1.0"
description = "Generate curriculum dependency diagrams from an Excel workbook"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "openpyxl>=3.1.5",
    "pandas>=3.0.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-mock>=3.11.1",
    "pytest-cov>=6.0.0",
]

[tool.setuptools.packages.find]
where = ["."]

[tool.black]
target-version = ["py312"]

[tool.pytest.ini_options]
addopts = "--cov=pipeline --cov-report=term-missing --cov-report=xml"
